2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[qcons] Do single-quote escaping via doubling, per SQL standard.

	* postgres-qcons.scm (sql-quote): Escape single-quote
	by doubling, instead of inserting a backslash prior to, it.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[t-mgr int] For column values, allow keywords to stand for themselves.

	* postgres-table.scm (pgtable-manager ->db-insert-string):
	Pass all keywords through, unchanged.

2009-06-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[t-mgr] Recognize #:DEFAULT as column value.

	* postgres-table.scm (pgtable-manager ->db-insert-string):
	For #:DEFAULT, return "DEFAULT".

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres) proc: pg-mblen

	* libpq.c (pg_char_to_encoding) [!HAVE_DECL_PG_CHAR_TO_ENCODING]:
	New func decl.
	(encoding_alist): New static data structure.
	(pg_mblen): New GH_DEFPROC.
	(init_module): Init `encoding_alist'.

2009-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Use 1..7 instead of SCM_ARG1..SCM_ARG7.

	* libpq.c (pg_get_copy_data, pg_make_print_options)
	(pg_print, pg_set_notice_out_x): Use 1..7 directly.

2008-11-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `(ftell port)' instead of `(seek port 0 SEEK_CUR)'.

	* libpq.c (lob_lo_tell): Use `scm_ftell'.

2008-11-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Don't (pretend) to wrap system calls.

	* libpq.c (SYSCALL): Delete macro.
	(pg_trace, pg_untrace, pg_print): Update.

2008-09-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `(string-null? foo)' instead of `(string=? "" foo)'.

	* postgres-gxrepl.scm (gxrepl -read): Use `string-null?'.
	(gxrepl -print): Likewise.
	* postgres-table.scm (pgtable-manager): Likewise.

2008-09-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use `size_t' instead of `scm_sizet'.

	* libpq.c (xc_free): Change return value type to `size_t'.
	(res_free, sepo_free): Likewise.

2008-08-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove support for unused SCM_OUTPORTP.
