@@ -1,5 +1,15 @@
 2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	Revert: Support "E-prefixing" for `pgtable-manager' SQL quoting.
+
+	That is the wrong approach.
+
+	* postgres-table.scm: From module (database postgres),
+	no longer select `pg-result-status'.
+	(pgtable-manager): Use `sql-quote' directly.
+
+2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[qcons] Do single-quote escaping via doubling, per SQL standard.
 
 	* postgres-qcons.scm (sql-quote): Escape single-quote
